operator/pkg/gateway-api/testdata/gateway/gateway-multiple-listeners/input/gateway-multiple-listeners.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-multiple-listeners
  namespace: gateway-conformance-infra 
spec:
  gatewayClassName: cilium
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http-permisive
    port: 8080
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: gateway-conformance-infra
    name: http-restrictive
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: multiple-listeners 
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gateway-multiple-listeners
    namespace: gateway-conformance-infra
    kind: Gateway
    group: gateway.networking.k8s.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-conformance-infraa
  labels:
    gateway-conformance: infra
